# Salt-Research

./: .env  .env.example  .gitignore  Dockerfile  destination_file.txt  docker-compose.yml  setup_keyvault.sh
.trunk/: actions  logs  notifications  out  tools
docker/master/: dockerfile
docker/minion/: dockerfile
function_app/SaltAPIFunction/: function.json
master_client/: app.py  salt.py
range-controller/: pyproject.toml
range-controller/SaltAPIFunction/: __init__.py
salt/master/: master.conf  top.sls
salt/master/configs/: api.conf  salt
salt/master/configs/systemd/: salt-api.service  salt-master.service
salt/master/files/: api.conf
salt/master/pki/master/: master.pem  master.pub
salt/minion/: minion.conf  top.sls
salt/pillar/: top.sls
salt/pillar/minion/: init.sls
salt/pillar/windows/: init.sls
salt/states/: top.sls
salt/states/application/: config.sls  deploy.sls  init.sls
salt/states/database/: init.sls  mysql.sls  postgresql.sls
salt/states/network/: firewall.sls  init.sls  routing.sls
salt/states/security/: compliance.sls  hardening.sls  init.sls
salt/states/system/: download_file.sls  init.sls  packages.sls  users.sls
terraform/: backend-config.tf  data.tf  main.tf  outputs.tf  provider.tf  variables.tf
